fix composer spacing

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ textarea, input {
   //box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
-.composer { margin-left: 37px; margin-top: 0;}
+.composer { margin-left: 0; margin-top: 0;}
 
 textarea:hover, textarea:focus, input:hover, input:focus, {
   background: transparent;
